--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">ASHUTOSH RAI</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="https://www.instagram.com/" class="instagram"><i class="bx bxl-instagram"></i></a>
+          <a href="https://www.instagram.com/ashutosh.rai.10485/" class="instagram"><i class="bx bxl-instagram"></i></a>
           <a href="https://www.linkedin.com/in/ashutosh-rai-7211595a" class="linkedin"><i class="bx bxl-linkedin"></i></a>
           
         </div>
@@ -242,7 +242,7 @@
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-app">App</li>
+              <li data-filter=".filter-app">app</li>
               <li data-filter=".filter-card">audio and illustrations</li>
               <li data-filter=".filter-web">photography and ads</li>
             </ul>
