--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -90,9 +90,9 @@
 
                 <div>
                   <video width="700" height="450" controls="controls" poster="image" preload="true">
-                    <source src="D:\arfolio\arfolio" type="video/mov"/>
-                    <source src="D:\arfolio\arfolio" type="video/mp4" />
-                    <source src="D:\arfolio\arfolio" type="video/oog" />
+                    <source src="ar.mp4" type="video/mov"/>
+                    <source src="ar.mp4" type="video/mp4" />
+                    <source src="ar.mp4" type="video/oog" />
                     Your browser does not support the video tag.
                   </video>
                </div>
