--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -88,14 +88,9 @@
                   <img src="assets/img/portfolio/portfolio-details-1.jpg" alt="">
                 </div>
 
-                <div>
-                  <video width="700" height="450" controls="controls" poster="image" preload="true">
-                    <source src="ar.mp4" type="video/mov"/>
-                    <source src="ar.mp4" type="video/mp4" />
-                    <source src="ar.mp4" type="video/oog" />
-                    Your browser does not support the video tag.
-                  </video>
-               </div>
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/portfolio-details-3.jpg" alt=""> 
+                </div>
 
                 <div class="swiper-slide">
                   <img src="assets/img/portfolio/portfolio-details-3.jpg" alt="">
