--- a/portfolio-details - 2.html
+++ b/portfolio-details - 2.html
@@ -39,7 +39,7 @@
 
       <div class="profile">
         <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
-        <h1 class="text-light"><a href="index.html">Alex Smith</a></h1>
+        <h1 class="text-light"><a href="index.html">Ashutosh Rai</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://www.instagram.com/ashutosh.rai.10485/" class="instagram"><i class="bx bxl-instagram"></i></a>
           <a href="https://www.linkedin.com/in/ashutosh-rai-7211595a" class="linkedin"><i class="bx bxl-linkedin"></i></a>
@@ -77,7 +77,7 @@
     </section><!-- End Breadcrumbs -->
 
     <!-- ======= Portfolio Details Section ======= -->
-    <section id="portfolio-details" class="portfolio-details">
+    <section id="portfolio-details" class="portfolio-details-2">
       <div class="container">
 
         <div class="row gy-4">
@@ -108,9 +108,7 @@
               <h3>Project information</h3>
               <ul>
                 <li><strong>Category</strong>: Web design</li>
-                <li><strong>Client</strong>: ASU Company</li>
-                <li><strong>Project date</strong>: 01 March, 2020</li>
-                <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
+                </a></li>
               </ul>
             </div>
             <div class="portfolio-description">
