--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -38,7 +38,7 @@
 
       <div class="profile">
         <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
-        <h1 class="text-light"><a href="index.html">Alex Smith</a></h1>
+        <h1 class="text-light"><a href="index.html">Ashutosh Rai</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://www.instagram.com/ashutosh.rai.10485/" class="instagram"><i class="bx bxl-instagram"></i></a>
           <a href="https://www.linkedin.com/in/ashutosh-rai-7211595a" class="linkedin"><i class="bx bxl-linkedin"></i></a>
@@ -108,9 +108,9 @@
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>details</h2>
+              <h2>Details</h2>
               <p>
-                the idea behind the project is to explore the Ar technology in relation with brandings.For example ive used a visiting card for this project. 
+                The idea behind the project is to explore the Ar technology in relation with brandings.For example ive used a visiting card for this project. 
               </p>
             </div>
           </div>
