--- a/portfolio-details-2.html
+++ b/portfolio-details-2.html
@@ -24,8 +24,6 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
-
- 
 </head>
 
 <body>
@@ -66,10 +64,10 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Portfoio Details</h2>
+          <h2>Portfolio Details</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li>Portfoio Details</li>
+            <li>Portfolio Details</li>
           </ol>
         </div>
 
@@ -77,7 +75,7 @@
     </section><!-- End Breadcrumbs -->
 
     <!-- ======= Portfolio Details Section ======= -->
-    <section id="portfolio-details" class="portfolio-details-2">
+    <section id="portfolio-details-2" class="portfolio-details">
       <div class="container">
 
         <div class="row gy-4">
