--- a/portfolio-details-2.html
+++ b/portfolio-details-2.html
@@ -103,16 +103,16 @@
 
           <div class="col-lg-4">
             <div class="portfolio-info">
-              <h3>Project information</h3>
+              <h3>Photography</h3>
               <ul>
-                <li><strong>Category</strong>: Web design</li>
+                <li><strong>Category</strong>: photography</li>
                 </a></li>
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>This is an example of portfolio detail</h2>
+              <h2>Detail</h2>
               <p>
-                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+                This are my personel collection of photograph which i shot back in india. 
               </p>
             </div>
           </div>
