--- a/index.html
+++ b/index.html
@@ -100,11 +100,7 @@
                   </ul>
               </div>
             </div>
-            <p>
-              Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-              Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque. Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores.
-            </p>
-          </div>
+            </div>
         </div>
 
       </div>
@@ -243,8 +239,8 @@
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
               <li data-filter=".filter-app">app</li>
-              <li data-filter=".filter-card">audio and illustrations</li>
-              <li data-filter=".filter-web">photography and ads</li>
+              <li data-filter=".filter-card">audio and Ads</li>
+              <li data-filter=".filter-web">photography and illustration</li>
             </ul>
           </div>
         </div>
@@ -301,7 +297,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
